--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,13 @@
-name: docfx for GitHub Pages
-
+# Your GitHub workflow file under .github/workflows/
+# Trigger the action on push to main
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches:
-      - 'main'
-      ##- 'releases/**'
-  release:
-    types: [published]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+      - main
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
+  actions: read
   pages: write
   id-token: write
 
@@ -23,71 +16,29 @@ permissions:
 concurrency:
   group: "pages"
   cancel-in-progress: false
-
+  
 jobs:
-  # Single deploy job since we're just deploying
-  deploy:
+  publish-docs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-
-
-    #########################################
-    ######  sator-imaging/docfx-pages  ######
-    #########################################
     steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Dotnet Setup
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 8.x
 
-      # for extensibility, docfx-pages does NOT checkout your repository.
-      # so you need to checkout manually prior to sator-imaging/docfx-pages.
-      - name: Checkout
-        uses: actions/checkout@v4
+    - run: dotnet tool update -g docfx
+    - run: docfx <docfx-project-path>/docfx.json
 
-
-      # after checkout, you can checkout another repo, copy logo image or
-      # other assets into '.docfx' folder to setup your own docfx environment.
-      # note that images must be copied into '.docfx/images', 'images' or '.images'.
-
-
-      ######  main  ######
-
-      - uses: sator-imaging/docfx-pages@v1
-        id: deployment   # required to show url in actions result page.
-        with:
-
-          # required options
-          # NOTE: double-quote (") cannot be used, backquote (`) must be escaped (\`).
-          app_name:    'Deploy Test'
-          site_title:  'Deploy Test using sator-imaging/docfx-pages'
-          site_footer: '<big>&times; Is HTML accepted?</big>'
-
-          # optional
-          class_members: 'separatePages'  # 'separatePages' or 'samePage'
-          google_analytics: ''  # empty to disable
-          define_symbols: ''  # additional preprocessor symbols separated by ';'
-
-          # paths must be relative from .docfx folder. default value is used when not set.
-          # note that url works but only in top page. see sample website for detail.
-          ###site_logo:    '<logo>.svg'
-          ###site_favicon: '<favicon>.svg'
-
-          # advanced options
-          # --> https://dotnet.github.io/docfx/docs/template.html?tabs=modern#custom-template
-          # main.js
-          # NOTE: double-quote (") cannot be used, backquote (`) must be escaped (\`).
-          main_js: |
-            export default {
-                defaultTheme: 'light',
-                showLightbox: (img) => true,
-                iconLinks: [
-                    {
-                        icon: 'github',
-                        href: 'https://github.com/sator-imaging',
-                        title: 'GitHub'
-                    },
-                ],
-            }
-
-          # main.css
-          # NOTE: double-quote (") cannot be used, backquote (`) must be escaped (\`).
-          main_css: |
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
+      with:
+        # Upload entire repository
+        path: '<docfx-project-path>/_site'
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
