--- a/en/toc.yml
+++ b/en/toc.yml
@@ -1,5 +1,5 @@
 - name: Introduction
-  href: ../intro.md
+  href: ../index.md
 - name: Reference Field Setting Feature
   href: reference_set_context.md
 - name: Selection History Feature
