--- a/jp/toc.yml
+++ b/jp/toc.yml
@@ -1,6 +1,6 @@
 - name: 初めに
   href: intro.md
 - name: 参照フィールド設定機能
-  href: reference_set_context.md
+  href: ref_field_assign.md
 - name: 選択履歴機能
   href: selection_history.md
