--- a/jp/toc.yml
+++ b/jp/toc.yml
@@ -1,6 +1,6 @@
-- name: 初めに
+- name: はじめに
   href: intro.md
-- name: 参照フィールド設定機能
-  href: ref_field_assign.md
-- name: 選択履歴機能
+- name: カスタムコンテキストメニュー
+  href: context_menu.md
+- name: 選択履歴
   href: selection_history.md
